<resources>
    <string name="app_name">Recipe Whiz</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="to_log_in"><u>Already have an account? Login here</u></string>
    <string name="sign_up_description">Recipe Whiz is the easy way to quickly and easily enter all your favorite recipes and organize them exactly the way you want! Quickly search for your favorite recipes by a simple search. For all you visual learners out there, all our recipes can be  linked to a YouTube video or an official recipe website! Lastly, you have the ability to share all your favorite recipes with anyone you like. Never worry about the unorganized paper recipes laying around your kitchen again, as Recipe Whiz provides all the necessary tools to excel in your kitchen!</string>
    <string name="sign_up_title">Sign Up For Recipe Whiz</string>
    <string name="please_email"> Please enter an email</string>
    <string name="please_password"> Please enter a password</string>
    <string name="sign_up_button"> Sign Up</string>
    <string name="to_sign_up"><u>Dont have an account? Sign up here</u></string>
    <string name="log_in_button">Login</string>
    <string name="your_email"> Please enter your email</string>
    <string name="your_password"> Please enter your password</string>
    <string name="welcome_back">Welcome back to Recipe Whiz! Please login below to continue using this app.</string>
    <string name="login_title">Login to Recipe Whiz</string>
    <string name="recipe_name">Recipe Name:</string>
    <string name="enter_name">Enter Recipe Name Here</string>
    <string name="rating">Rating:</string>
    <string name="image_link">Image Link:</string>
    <string name="image_link_here">Enter Image Link Here:</string>
    <string name="web_link">Web Link:</string>
    <string name="web_link_here">Enter a Website Link Here (optional)</string>
    <string name="youtube_link">Youtube Link:</string>
    <string name="youtube_link_here">Enter a Youtube Link Here (optional)</string>
    <string name="cooking_instructions">Coking Instructions:</string>
    <string name="cooking_instructions_here">Enter the cooking instructions here</string>
    <string name="ingredients">Ingredients:</string>
    <string name="ingredients_here">Enter an ingredient here</string>
    <string name="add_ingredient">ADD</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="pull_data">Pull data from a website:</string>
    <string name="web_data">Web data</string>
    <string name="time">Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="cancel_alarm">Cancel</string>
    <string name="default_timer">Start Androids Default Timer</string>
    <string name="start">Start</string>
    <string name="conversion">Measurement Converter</string>
    <string name="number">Number</string>
    <string name="to">to</string>
    <string name="convert">Convert</string>
    <string name="result">Result:</string>
    <string name="recipe">Recipe</string>
    <string name="get_started">Get Started!</string>
    <string name="title">Recipe Title</string>
    <string name="instructions">Cooking Instructions</string>
    <string name="ingredient">Ingredients</string>
    <string name="lorem">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores reprehenderit facere, iusto voluptate cupiditate dicta minima? Accusantium amet officia veniam ratione reiciendis voluptate consectetur doloribus similique! Doloremque repellendus asperiores nisi, fugit aliquam eum labore a ullam provident reiciendis dolor pariatur ut rerum iste rem? Deserunt aspernatur perspiciatis quidem suscipit excepturi ullam et vero laudantium culpa officia fuga repudiandae delectus est, vitae dolore officiis necessitatibus, cumque exercitationem veritatis. Tempore id blanditiis totam corporis distinctio eveniet molestias commodi dolores nesciunt modi sed autem cupiditate quisquam, sit perspiciatis saepe excepturi eaque! Obcaecati.</string>

    <string name="search_web"><u>Not what you are looking for? Search the web here...</u></string>

    <string name="watch">Watch</string>
    <string name="online">View Online</string>
    <string name="share">Share</string>
    <string name="measure">Measure</string>
    <string name="sub">Substitute</string>

    <string name="edit_ingred">Edit Ingredient</string>
    <string name="delete_ingred">Delete Ingredient</string>

    <string name="edit_rec">Edit Recipe</string>
    <string name="delete_rec">Delete Recipe</string>

    <string name="what">What to do?</string>
    <string name="add_personal">Add a New Recipe</string>
    <string name="favorites">View Your Favorites</string>
    <string name="con">Convert a Measurement</string>
    <string name="alarm">Set a Cooking Alarm</string>
    <string name="subs">Find an Ingredient Substitute</string>
    <string name="acnt">Your Account</string>
    <string name="lve">Leave</string>
    <string name="danger">Danger Zone</string>
    <string name="del_all">Delete All Recipes</string>
    <string name="srch">Search</string>

















    <string-array name="units">
        <item>Ounces</item>
        <item>Cups</item>
        <item>Pounds</item>
        <item>tbsp</item>
        <item>tsp</item>
        <item>mL</item>
        <item>fl oz</item>
    </string-array>
</resources>
