<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:orderInCategory="100"
        android:title="@string/what"
        app:showAsAction="never"
        android:visible="true"
        >
        <menu><item
            android:id="@+id/add_menu"
            android:orderInCategory="100"
            android:title="@string/add_personal"
            app:showAsAction="never"
            android:visible="true"
            android:icon="@drawable/ic_add"
            />
            <item
                android:id="@+id/favorites_menu"
                android:orderInCategory="100"
                android:title="@string/favorites"
                app:showAsAction="never"
                android:visible="true"
                android:icon="@drawable/ic_star"/>
            <item
                android:id="@+id/conversion"
                android:orderInCategory="100"
                android:title="@string/con"
                app:showAsAction="never"
                android:visible="true"
                android:icon="@drawable/ic_converter"/>
            <item
                android:id="@+id/cook_timer"
                android:orderInCategory="100"
                android:title="@string/alarm"
                app:showAsAction="never"
                android:visible="true"
                android:icon="@drawable/ic_timer"/>
            <item
                android:id="@+id/substitute"
                android:orderInCategory="100"
                android:title="@string/subs"
                app:showAsAction="never"
                android:visible="true"
                android:icon="@drawable/ic_substitute"/>
        </menu>
    </item>

    <item
        android:orderInCategory="100"
        android:title="@string/acnt"
        app:showAsAction="never"
        android:visible="true" >
        <menu>
            <item
                android:id="@+id/logout_menu"
                android:orderInCategory="100"
                android:title="@string/lve"
                app:showAsAction="never"
                android:visible="true"
                android:icon="@drawable/ic_logout"/>

        </menu>
    </item>
    <item
        android:orderInCategory="100"
        android:title="@string/danger"
        app:showAsAction="never"
        android:visible="true" >
        <menu>
            <item
                android:id="@+id/delete_account_menu"
                android:orderInCategory="100"
                android:title="@string/del_all"
                app:showAsAction="never"
                android:visible="true"
                android:icon="@drawable/ic_delete_account"/>
        </menu>
    </item>



</menu>