<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_watch"
        android:icon="@drawable/ic_play_white"
        android:title="@string/watch"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_web"
        android:icon="@drawable/ic_web_white"
        android:title="@string/online"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_measure"
        android:icon="@drawable/ic_converter_white"
        android:title="@string/measure"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_substitute"
        android:icon="@drawable/ic_substitute_white"
        android:title="@string/sub"
        app:showAsAction="always"/>




</menu>