<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:layout_gravity="center"
            android:textSize="27sp"
            android:textColor="@color/black"
            android:hint="@string/time"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"
        android:id="@+id/set_alarm"
        android:background="@drawable/signup_button_style"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="14dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_alarm"
        android:id="@+id/cancel_alarm"
        android:background="@drawable/smaller_button_style"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_timer"
            android:layout_marginTop="102dp"
            android:textSize="27sp"
            android:gravity="center"
            android:textColor="@color/black"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/default_timer"
            android:background="@drawable/smaller_button_style"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:textColor="@color/white"/>


    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_home"
        android:id="@+id/go_home"
        />

</RelativeLayout>